# learn

./: .gitignore  README.md
rodep-rescue2026/: .bash_history  .clang-tidy  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  rm.txt
rodep-rescue2026/.config/ros.org/: rqt_gui.ini
rodep-rescue2026/.ros/log/: latest
rodep-rescue2026/.rviz2/: persistent_settings
rodep-rescue2026/docs/: description.md
rodep-rescue2026/flutter/: Dockerfile
rodep-rescue2026/flutter/robot_ui/: README.md  pubspec.yaml
rodep-rescue2026/minutes/: oct4.md
rodep-rescue2026/review/: dynamixel_sdk_test.cpp
rodep-rescue2026/ros_ws/: Dockerfile  Makefile  log.txt  requirements.txt
rodep-rescue2026/ros_ws/install/: local_setup.sh  setup.sh
rodep-rescue2026/ros_ws/launch/: rosbridge.py
rodep-rescue2026/ros_ws/log/: latest_build
rodep-rescue2026/ros_ws/rosbag/: description.md
rodep-rescue2026/ros_ws/sandbox/: sandbox.md
rodep-rescue2026/ros_ws/src/: description.md
rodep-rescue2026/ros_ws/src/sekirei_moveit_config/: CMakeLists.txt
rodep-rescue2026/ros_ws/src/sekirei_moveit_config/config/: sekirei.srdf
rodep-rescue2026/ros_ws/src/sekirei_moveit_config/launch/: demo.launch.py  joy_control.launch.py  joy_only.launch.py
rodep-rescue2026/ros_ws/src/sekirei_moveit_config/scripts/: fake_controller.py  move_to_pose.py  test_moveit.py
rodep-rescue2026/ros_ws/src/sekirei_moveit_config/src/: testn.cpp
rodep-rescue2026/scripts/: scripts.md
ros2_ws/: Makefile
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/rviz/: arm.rviz
ros2_ws/src/: Makefile
ros2_ws/src/arm_controller/: CMakeLists.txt
ros2_ws/src/arm_controller/config/: moveit_cpp.yaml  moveit_servo.yaml  ompl_planning.yaml  ros2_controllers.yaml  sekirei_arm.srdf
ros2_ws/src/arm_controller/launch/: demo.launch.py  joy_moveit_teleop.launch.py
ros2_ws/src/arm_controller/scripts/: ik_control.py  joy_teleop.py  move_arm.py  simple_ik.py  test_ik.py
ros2_ws/src/arm_controller/src/: joy_moveit_teleop.cpp
ros2_ws/src/cpp_srvcli/: CMakeLists.txt  package.xml
ros2_ws/src/custom_action_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/custom_action_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/joystick_test_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/launch_tutorial/: CMakeLists.txt  package.xml
ros2_ws/src/sekirei_urdf/: CMakeLists.txt
ros2_ws/urdf/: sekirei.urdf
(+227 files in other folders)
